test/users/weili/raiseType3-blc.good
raiseType3-blc.chpl:1: error: attempt to redefine reserved type 'int'
