test/users/weili/raiseType3-blc.chpl
proc raiseType(type int) { return real; }
//proc raiseType(type bool) { return int; }
var h1:raiseType(int).type;
